--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 	<div class="outerColumn">
 		<div class="innerColumn"></div>
 	</div>
-
+	<script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
 	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
 	<script type="text/javascript" src="/scripts/main.js"></script>
 </body>
