--- a/index.html
+++ b/index.html
@@ -24,6 +24,6 @@
 	</div>
 	<script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
 	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="/scripts/main.js"></script>
+	<script type="text/javascript" src="/scripts/bundle.js"></script>
 </body>
 </html>
