attempt to correct linking errors

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
 	<title>JQuery Image Board</title>
-	<link rel="stylesheet" type="text/css" href="/styles/normalize.css">
-	<link rel="stylesheet" type="text/css" href="/styles/main.sass.css">
+	<link rel="stylesheet" type="text/css" href="./styles/normalize.css">
+	<link rel="stylesheet" type="text/css" href="./styles/main.sass.css">
 </head>
 <body>
 	<div class="header">
@@ -23,7 +23,7 @@
 		<div class="innerColumn"></div>
 	</div>
 	<script src="//www.parsecdn.com/js/parse-1.6.7.min.js"></script>
-	<script type="text/javascript" src="/node_modules/jquery/dist/jquery.min.js"></script>
-	<script type="text/javascript" src="/scripts/bundle.js"></script>
+	<script type="text/javascript" src="./node_modules/jquery/dist/jquery.min.js"></script>
+	<script type="text/javascript" src="./scripts/bundle.js"></script>
 </body>
 </html>
